# BVlain

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  __init__.py  core.py  pyproject.toml  setup.py  test_debug.ipynb  test_debug.md  upload_to_pypi.txt
bvlain/: __init__.py  _version.py  check_saddle_finder_relaxed_final.cif  core.py  potentials.py  tests_debug.ipynb
bvlain/data/: cation.pkl  quantum_n.pkl  shannon-radii.json
data/: anion.pkl
docs/: requirements.txt
docs/source/: README.md  application.md  conf.py  index.md  lain_.md  speed.md  theory.md  usage.md
docs/source/notebooks/: theory.ipynb  tutorials.ipynb
