
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "core"
authors = [{name = "Artem Dembitskiy", email = "art.dembitskiy@gmail.com"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    'sphinx~=4.2.0',
    'myst-parser',
    'furo',
    'nbsphinx',
#    'ase',
#    'numpy',
#    'pandas',
#    'scipy',
#    'networkx',
#    'pymatgen'

]

[tool.poetry]
# ...
packages = [
    { include = "core.py" },
]