
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bvlain"
authors = [{name = "Artem Dembitskiy", email = "art.dembitskiy@gmail.com"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    'sphinx~=5.3.0',
    'myst-parser',
    'furo',
    'nbsphinx',
    'ase'

]

[tool.poetry]
# ...
packages = [
    { include = "bvlain" },
]