[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

dependencies = [
  "numpy",
  "scipy",
  "ase",
  "pymatgen",
  "joblib"
]


[project]
name = "bvlain"
authors = [{name = "Artem Dembitskiy", email = "art.dembitskiy@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE"}


[project.optional-dependencies]
doc = [
    'sphinx~=5.3.0',
    'myst-parser',
    'furo',
    'nbsphinx',
    'ase'
]

[tool.poetry]
# ...
packages = [
    { include = "bvlain" },
]